03-RUN/service-mesh/demo/inventory/rules/inventory-default.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: inventory-default
  namespace: coolstore-inventory
spec:
  hosts:
    - $GATEWAY_URL
  gateways:
    - istio-system/coolstore-gateway
  http:
    - name: service-route
      match:
        - uri:
            exact: /services/inventory
      route:
        - destination:
            host: inventory
            port:
              number: 80
    - name: frontend-route
      match:
        - uri:
            prefix: /inventory
      rewrite:
        uri: /
      route:
        - destination:
            host: inventory
            port:
              number: 80
