03-RUN/service-mesh/demo/inventory/rules/inventory-delay-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: inventory-fault-delay
  namespace: inventory
spec:
  hosts:
    - inventory
#  gateways:
#    - catalog/catalog-gateway
  http:
  - fault:
      delay:
        fixedDelay: 5s
        percentage:
          value: 100
    route:
    - destination:
        host: inventory
        port:
          number: 80
