03-RUN/service-mesh/demo/inventory/rules/inventory-fault-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: inventory-fault
  namespace: inventory
spec:
  hosts:
    - inventory
  gateways:
    - istio-system/coolstore-gateway
  http:
    - fault:
        abort:
          httpStatus: 500
          percentage:
            value: 50
      route:
        - destination:
            host: inventory
            port:
              number: 80
